fixed whole home page but then dark mode icon hidden :(

--- a/components/hero.css
+++ b/components/hero.css
@@ -1,3 +1,27 @@
+:root {
+  --color-white-100: hsl(206, 0%, 100%);
+  --color-white-200: hsl(206, 0%, 90%);
+  --color-white-300: hsl(206, 0%, 80%);
+  --color-white-400: hsl(206, 0%, 65%);
+  --color-white-500: hsl(206, 0%, 50%);
+  --color-black-100: hsl(217, 30%, 18%);
+  --color-black-200: hsl(217, 27%, 15%);
+  --color-black-300: hsl(217, 27%, 12%);
+  --color-black-400: hsl(217, 52%, 9%);
+  --color-blue-100: hsl(215, 97%, 87%);
+  --color-blue-200: hsl(215, 96%, 78%);
+  --color-blue-300: hsl(215, 94%, 68%);
+  --color-blue-400: hsl(215, 91%, 60%);
+  --color-blue-500: hsl(215, 83%, 53%);
+  --color-blue-600: hsl(215, 76%, 48%);
+  --shadow-small: 0 1px 3px 0 rgba(0, 0, 0, 0.1),
+    0 1px 2px 0 rgba(0, 0, 0, 0.06);
+  --shadow-medium: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  --shadow-large: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+
 .section {
   margin: 0 auto;
   padding: 5rem 0 2rem;
@@ -11,6 +35,8 @@
   justify-content: space-around;
   align-items: center;
   row-gap: 2rem;
+  padding-left: 4rem;
+  padding-right: 4rem;
 }
 
 .banner-inner {
@@ -19,8 +45,12 @@
   flex-direction: column;
   align-items: flex-start;
   row-gap: 1.5rem;
-  margin-left: 80px;
-  padding: 0 1.25rem;
+  /* padding: 3rem;
+  padding-left: 5rem; */
+}
+
+.learnMore:hover {
+  background-color: var(--color-blue-300);
 }
 
 .btn {
@@ -106,7 +136,7 @@
     column-gap: 2rem;
   }
   .banner-image {
-    max-width: 33rem;
+    max-width: 30rem;
     height: auto;
     text-align: center;
   }
