--- a/components/navbar.css
+++ b/components/navbar.css
@@ -23,7 +23,7 @@
 }
 
 .header {
-  position: fixed;
+  /* position: fixed; */
   width: 100%;
 }
 
@@ -35,8 +35,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-left: 30px;
-  margin-right: 30px;
+  /* margin-left: 30px;
+  margin-right: 30px; */
   height: 4rem;
 }
 
@@ -55,6 +55,10 @@
 
 .darkmode .brand {
   color: var(--color-white-100);
+}
+
+.menu-item:hover {
+  color: var(--color-blue-300);
 }
 
 .menu-item:hover .submenu {
@@ -121,6 +125,14 @@
   padding: 0.75rem 2rem;
 }
 
+.login:hover {
+  color: var(--color-blue-300);
+}
+.register:hover {
+  background-color: var(--color-blue-300);
+  border: 2px solid var(--color-blue-300);
+}
+
 /* Login / Registration  */
 
 .overlay {
@@ -134,9 +146,9 @@
 }
 
 .loginbox {
-  width: 80%; /* Adjust the width for responsiveness */
-  max-width: 280px; /* Added max-width to ensure it doesn't get too wide */
-  height: auto; /* Adjusted to auto to allow for dynamic content */
+  width: 80%;
+  max-width: 280px; 
+  height: auto;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -154,16 +166,16 @@
 
 .loginbox h1 {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 1.5rem; /* Adjusted font size */
+  font-size: 1.5rem; 
   border-bottom: 2px;
-  margin-bottom: 20px; /* Adjusted margin */
+  margin-bottom: 20px; 
   padding: 13px 0;
 }
 
 .textbox {
   width: 100%;
   overflow: hidden;
-  font-size: 16px; /* Adjusted font size */
+  font-size: 16px; 
   padding: 8px 0;
   margin: 8px 0;
   border-bottom: 1px solid #ffffff;
@@ -177,12 +189,12 @@
   width: 80%;
   float: left;
   margin: 0 10px;
-  font-size: 16px; /* Adjusted font size */
+  font-size: 16px; 
 }
 
 input::placeholder {
   color: white;
-  font-size: 16px; /* Adjusted font size */
+  font-size: 16px; 
 }
 
 .confirmlogin {
